# MnemonicAiBun24

./: .dockerignore  .gitignore  Add to start.py  CHANGELOG.md  Dockerfile  Dockerfile.cloud  Dockerfile.dockerignore  K8s quickstart cmds  LICENSE  README.md  agent_memory.db  build_cloud_image.sh  config.example.env  config.json  config.json.bak  demo.py  docker-compose.observability.yml  docker-compose.yml  dryrun_train.py  example env.txt  install.py  mn_adapter.sh  mn_backup.sh  mn_diff.sh  mn_install.sh  mn_lib.sh  mn_run.sh  mn_service.sh  mn_swap_model.sh  pyproject.toml  quick start.txt  quickstart_deck.html  requirements-gpu.txt  requirements.txt  run.bat  run.py  run.sh  serve_sim.py  setup_deliverables.sh  simulator.html  (+2 more)
.github/: FUNDING.yml
.github/workflows/: docker-build-push.yaml  release.yaml
app/: adapter_ui.py  metrics.py
assets/music/: MUSIC-LICENSES.md
grafana/: dashboard.json  dashboards.yaml
k8s/: configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  service.yaml  servicemonitor.yaml  train-job.yaml
mnemonicai/: __init__.py  appconfig.py  backend.py  bridge.py  cli.py  config.py  consolidation.py  dynamics.py  embeddings.py  env.py  events.py  hotswap.py  llm.py  memory_item.py  memory_system.py  patch_causal.py  persistence.py  retrieval.py  salience.py  server.py  stores.py  trainer.py  vectors.py
mnemonicai/adapters/: __init__.py  base.py  generic.py  lmstudio.py  platform_stubs.py
mnemonicai/web/: monitor.html
prometheus/: alerts.yml  prometheus.yml
tests/: test_memory.py
